force-app/main/default/objects/Account/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <description>Stores preferred name or nickname; used for personalized communication.</description>
    <label>Preferred Name</label>
    <type>TextArea</type>
</CustomField>