force-app/main/default/objects/Account/fields/Primary_Contact_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mismatch__c</fullName>
    <formula>Account_Id__c &lt;&gt; Primary_Contact__r.Account.Main_Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Mismatch</label>
    <type>Checkbox</type>
</CustomField>