force-app/main/default/objects/Account/fields/Retype_Password__c.field-meta.xml
<CustomField>
    <fullName>Retype_Password__c</fullName>
    <description>The field for re-entering the password to ensure accuracy.</description>
    <label>Retype Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>