force-app/main/default/objects/Account/fields/Rollup_Sub_Member__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Sub_Member__c</fullName>
    <description>Stores current member count; used to validate against allowed limits from membership types.</description>
    <label>Max Sub Members Reached</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>