force-app/main/default/objects/Account/fields/Ruling_Date__c.field-meta.xml
<CustomField>
    <fullName>Ruling_Date__c</fullName>
    <label>Ruling Date</label>
    <length>40</length>
    <type>Text</type>
</CustomField>