force-app/main/default/objects/Account/fields/SMS_MMS_Number__c.field-meta.xml
<CustomField>
    <fullName>SMS_MMS_Number__c</fullName>
    <description>The phone number used for sending SMS or MMS messages to the individual.</description>
    <label>SMS/MMS Number</label>
    <type>Phone</type>
</CustomField>