force-app/main/default/objects/Account/fields/Sub_Member_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sub_Member_Limit__c</fullName>
    <label>Sub Member Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>