force-app/main/default/objects/Account/fields/SubMembers_List__c.field-meta.xml
<CustomField>
    <fullName>SubMembers_List__c</fullName>
    <description>This field denotes the list of submembers linked to a particular account</description>
    <label>SubMembers List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>