force-app/main/default/objects/Account/fields/Subsection_Description__c.field-meta.xml
<CustomField>
    <fullName>Subsection_Description__c</fullName>
    <label>Subsection Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>