force-app/main/default/objects/Account/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <description>Stores membership end date; indicates expiration of membership.</description>
    <formula>IF(Membership__r.Is_Active__c , Membership__r.TermEndDate__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>