force-app/main/default/objects/Account/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <description>Stores membership start date; indicates beginning of membership lifecycle.</description>
    <formula>Membership__r.TermStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>