force-app/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>The territory part of the individual&apos;s address.</description>
    <label>Territory</label>
    <type>TextArea</type>
</CustomField>