force-app/main/default/objects/Account/fields/W9_Received__c.field-meta.xml
<CustomField>
    <fullName>W9_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W9 Received</label>
    <type>Checkbox</type>
</CustomField>