force-app/main/default/objects/Account/fields/X__c.field-meta.xml
<CustomField>
    <fullName>X__c</fullName>
    <description>The individual&apos;s X (formerly Twitter) profile link or username.</description>
    <label>X</label>
    <type>Url</type>
</CustomField>