force-app/main/default/objects/Account/recordTypes/Household_Account1.recordType-meta.xml
<RecordType>
    <fullName>Household_Account1</fullName>
    <active>true</active>
    <label>Household Account1</label>
</RecordType>