force-app/main/default/objects/Account/recordTypes/Organization_Account.recordType-meta.xml
<RecordType>
    <fullName>Organization_Account</fullName>
    <active>true</active>
    <label>Organization Account</label>
</RecordType>