force-app/main/default/objects/Account/validationRules/Coordinating_Program_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Coordinating_Program_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(IsPersonAccount),
    Paid_By_CP__c = TRUE,
    ISBLANK(Coordinating_Program__c)
)</errorConditionFormula>
    <errorDisplayField>Coordinating_Program__c</errorDisplayField>
    <errorMessage>Coordinating Program must be filled in when Paid By CP is checked.</errorMessage>
</ValidationRule>