force-app/main/default/objects/Account/validationRules/CP_Field_Required_Person_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Field_Required_Person_Account</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
IsPersonAccount,
Paid_By_CP__c = TRUE,
ISBLANK(Parent_Account__c)
)</errorConditionFormula>
    <errorDisplayField>Parent_Account__c</errorDisplayField>
    <errorMessage>Coordinating Program must be filled in when Paid By CP is checked.</errorMessage>
</ValidationRule>