force-app/main/default/objects/Account/listViews/Address_State_Street.listView-meta.xml
<ListView>
    <fullName>Address_State_Street</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE_CODE</field>
        <operation>equals</operation>
        <value>RI</value>
    </filters>
    <label>Address- State, Street</label>
</ListView>