force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Account_Id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Is_Membership_Active__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Primary_Contact_Email__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Membership_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Membership_Type__c</field>
        <operation>contains</operation>
        <value>Allied Member</value>
    </filters>
    <label>All Accounts</label>
</ListView>