force-app/main/default/objects/Account/listViews/Coordinating_Programs.listView-meta.xml
<ListView>
    <fullName>Coordinating_Programs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>Program_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Is_Membership_Active__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization_Account</value>
    </filters>
    <filters>
        <field>Program_Type__c</field>
        <operation>equals</operation>
        <value>Coordinating Program</value>
    </filters>
    <label>Coordinating Programs</label>
</ListView>