force-app/main/default/objects/Account/listViews/Funding_Priorities.listView-meta.xml
<ListView>
    <fullName>Funding_Priorities</fullName>
    <columns>Account_Id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Funding_priorities__c</columns>
    <columns>Prospects__c</columns>
    <columns>Is_Donor__c</columns>
    <columns>Is_Membership_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funding_priorities__c</field>
        <operation>includes</operation>
        <value>Climate Resilience</value>
    </filters>
    <label>Funding Priorities</label>
</ListView>