force-app/main/default/objects/Account/listViews/Household_Accounts.listView-meta.xml
<ListView>
    <fullName>Household_Accounts</fullName>
    <columns>Account_Id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Household_Name__c</columns>
    <columns>Is_Membership_Active__c</columns>
    <columns>Program_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <filters>
        <field>Household_Name__c</field>
        <operation>contains</operation>
        <value>household</value>
    </filters>
    <label>Household Accounts</label>
</ListView>