force-app/main/default/objects/Account/listViews/Local_Programs.listView-meta.xml
<ListView>
    <fullName>Local_Programs</fullName>
    <columns>Account_Id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Type__c</field>
        <operation>equals</operation>
        <value>Local Program</value>
    </filters>
    <label>Local Programs</label>
</ListView>