force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>Account_Id__c</columns>
    <columns>Account_Name__pc</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization_Account,PersonAccount.PersonAccount</value>
    </filters>
    <filters>
        <field>Program_Type__c</field>
        <operation>equals</operation>
        <value>Coordinating Program</value>
    </filters>
    <label>My Accounts</label>
</ListView>