force-app/main/default/objects/Account/listViews/Organization_Donations.listView-meta.xml
<ListView>
    <fullName>Organization_Donations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization_Account</value>
    </filters>
    <filters>
        <field>Is_Donor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Organization Donations</label>
</ListView>